--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
     "axios": "^1.8.4",
@@ -24,7 +25,9 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
-    "react-toastify": "^11.0.5"
+    "react-markdown": "^10.1.0",
+    "react-toastify": "^11.0.5",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
