--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.6.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.5",
@@ -25,6 +25,8 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1"
@@ -39,7 +41,7 @@
     "@types/react-easy-crop": "^1.16.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "prisma": "^6.5.0",
+    "prisma": "^6.6.0",
     "typescript": "^5"
   }
 }
