--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-big-calendar": "^1.18.0",
     "react-bootstrap": "^2.10.9",
     "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
     "react-markdown": "^10.1.0",
