--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
+    "@fullcalendar/bootstrap5": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/list": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@google/generative-ai": "^0.24.0",
+    "@headlessui/react": "^2.2.1",
+    "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.5.0",
+    "@tabler/icons-react": "^3.31.0",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.5",
@@ -23,11 +35,12 @@
     "react-big-calendar": "^1.18.0",
     "react-bootstrap": "^2.10.9",
     "react-calendar": "^5.1.0",
+    "react-chat-elements": "^12.0.18",
+    "react-chat-ui": "^0.4.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1"
@@ -35,6 +48,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
+    "@types/glob": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-big-calendar": "^1.16.1",
@@ -42,7 +56,8 @@
     "@types/react-easy-crop": "^1.16.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "prisma": "^6.6.0",
+    "glob": "^11.0.1",
+    "prisma": "^6.5.0",
     "typescript": "^5"
   }
 }
