--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bootstrap": "^5.3.5",
     "cropperjs": "^2.0.0",
     "date-fns": "^4.1.0",
-    "next": "15.2.4",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
@@ -40,6 +40,7 @@
     "@types/react-easy-crop": "^1.16.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "eslint-formatter-compact": "^8.40.0",
     "prisma": "^6.5.0",
     "typescript": "^5"
   }
