--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/bootstrap5": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@google/generative-ai": "^0.24.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
+    "@tabler/icons-react": "^3.31.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.5",
@@ -38,10 +44,13 @@
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
     "@types/react-easy-crop": "^1.16.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "eslint-formatter-compact": "^8.40.0",
+    "postcss": "^8.5.3",
     "prisma": "^6.5.0",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
 }
